--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
 
     <dimen name="tile_size">42dp</dimen>
     <dimen name="board_size">336dp</dimen>
+
+    <dimen name="label_size">16sp</dimen>
 </resources>
